Optimised Student Service + Fixed Dark Mode Issue in background

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,13 +9,13 @@
 @include mat.core();
 
 //Defining colors for light theme
-$light-theme-primary: mat.define-palette(mat.$indigo-palette);
-$light-theme-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$light-theme-primary: mat.define-palette(mat.$blue-palette);
+$light-theme-accent: mat.define-palette(mat.$light-green-palette);
 $light-theme-warn: mat.define-palette(mat.$red-palette);
 
 //Defining colors for dark theme
-$dark-theme-primary: mat.define-palette(mat.$teal-palette);
-$dark-theme-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$dark-theme-primary: mat.define-palette(mat.$orange-palette);
+$dark-theme-accent: mat.define-palette(mat.$yellow-palette);
 $dark-theme-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
